fix search bar alignment

--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -7,17 +7,21 @@
     height: 49px; 
     width: 153px; 
     border: 1px solid lightgray;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    // border-top-right-radius: 5px;
+    // border-bottom-right-radius: 5px;
     font-family: 'Commissioner', sans-serif;
     font-size: 18px;
+    // position: relative;
+    // top: -1px;
 }
 .search-bar-city-dropdown {
     cursor: pointer;
     height: 49px; 
     width: 153px; 
     border: 1px solid lightgray;
-    border-radius: 5px;
+    // border-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     font-family: 'Commissioner', sans-serif;
     font-size: 18px;
 }
@@ -28,17 +32,19 @@
 .search-bar-city-dropdown:focus,
 .search-bar-button:focus
  {
-    border-color: blue;
+    border-color: #247f9e;
     outline: 0;
 }
 
 .search-bar-input-time {
     cursor: pointer;
-    height: 47px; 
+    height: 49px; 
     width: 153px; 
     border: 1px solid lightgray;
     font-family: 'Commissioner', sans-serif;
     font-size: 18px;
+    // border-top-left-radius: 5px;
+    // border-bottom-left-radius: 5px;
 }
 
 .search-bar-input-date {
@@ -46,14 +52,15 @@
     height: 47px; 
     width: 153px; 
     border: 1px solid lightgray;
+    font-size: 18px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    font-family: 'Commissioner', sans-serif;
-    font-size: 18px;
+    // margin-right: 10px;
+    // border-radius: 5px;
 }
 
 .date-time-people-container {
-    margin-right: 10px;
+    // margin-right: 10px;
 }
 
 .search-bar-button {
